--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "4.2.1@stable",
         "silverstripe-themes/simple": "~3.2.0",
-        "undefinedoffset/sortablegridfield": "dev-master"
+        "undefinedoffset/sortablegridfield": "dev-master",
+        "silverstripe/userforms": "^5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
